--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
     "openzeppelin-solidity": "2.1.3",
-    "web3": "1.0.0-beta.37",
+    "web3": "^1.0.0-beta.54",
     "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
@@ -83,7 +83,7 @@
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "ethlint": "^1.2.3",
+    "ethlint": "^1.2.4",
     "ganache-cli": "^6.4.0",
     "jest": "^24.1.0",
     "mocha-junit-reporter": "^1.18.0",
